--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -63,6 +63,11 @@
   margin-left: 10px;
 }
 
+.box-crypto-header img{
+  width: 32px;
+  height: 32px;
+}
+
 .box-crypto-content h1{
   margin-bottom: 0px;
 }
