--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -15,6 +15,15 @@
   margin: 0 auto;
 }
 
+.sub-title h1{
+  color: #63687D;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 46px;
+  margin-bottom: 0px;
+  padding: 0;
+}
+
 .navbar{
   display:flex;
   justify-content: space-between;
@@ -23,6 +32,15 @@
 
 .navbar-title p{
   text-align: start;
+  font-size: 14px;
+  color: #63687D;
+  font-weight: bold;
+}
+
+.navbar-title h1{
+  color: #1D1F29;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .navbar-theme{
@@ -39,6 +57,9 @@
 
 .theme p{
   margin-right: 20px;
+  font-size: 14px;
+  color: #848BAB;
+  font-weight: bold;
 }
 
 .wrapper-top{
@@ -50,7 +71,8 @@
 .box-crypto{
   width: 255px;
   min-height: 216px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
+  background-color: #F1F3FA;
 }
 
 .box-crypto-header{
@@ -61,6 +83,9 @@
 
 .box-crypto-header p{
   margin-left: 10px;
+  font-size: 14px;
+  color: #63687D;
+  font-weight: bold;
 }
 
 .box-crypto-header img{
@@ -70,9 +95,19 @@
 
 .box-crypto-content h1{
   margin-bottom: 0px;
+  color: #1D1F29;
+  line-height: 48px;
+  font-size: 56px;
+  margin-bottom: 0px;
+  margin-top:30px;
 }
 .box-crypto-content p{
   margin-top: 9px;
+  font-size: 12px; 
+  color: #63687D;
+  font-style: italic;
+  font-weight: bold;
+  letter-spacing: 3px;
   }
 
 .box-crypto-footer{
@@ -83,6 +118,8 @@
 
 .box-crypto-footer p{
   margin-left: 10px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .sub-title h1{
@@ -99,26 +136,41 @@
 }
 .box-gainer{
   width: 255px;
-  min-height: 125px;
-  border: 1px solid red;
+  height: 125px;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 24px;
+  background-color: #f1f3fa;
 }
 
 .box-gainer-header{
   padding-left: 24px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
+}
+
+.box-gainer-header h1{
+  color:#1D1F29;
+  font-size:32px;
+  margin-top: 23px;
+}
+
+.box-gainer-header p{
+  color: #63687D;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: justify;
+  margin-bottom: 0;
 }
 
 .box-gainer-content{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-around;
   padding-right: 31px;
 }
@@ -130,6 +182,8 @@
 
 .box-gainer-content div p{
   margin-left: 10px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .box-gainer-content-img{
