--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -2,8 +2,8 @@
   height: 100vh;
   max-width: 1440px;
   text-align: center;
-  border: 1px solid black;
-  box-sizing: border-box;
+  /* border: 1px solid black;
+  box-sizing: border-box; */
   margin: 0 auto;
 }
 
@@ -24,10 +24,19 @@
   padding: 0;
 }
 
+.red{
+  color: #DC414C
+}
+
+.green{
+  color: #1EB589
+}
+
 .navbar{
   display:flex;
   justify-content: space-between;
   min-height: 136px;
+  padding-top: 46px;
 }
 
 .navbar-title p{
@@ -41,11 +50,12 @@
   color: #1D1F29;
   font-size: 28px;
   font-weight: bold;
+  margin: 0;
 }
 
 .navbar-theme{
   display:flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
@@ -97,16 +107,15 @@
   margin-bottom: 0px;
   color: #1D1F29;
   line-height: 48px;
-  font-size: 56px;
+  font-size: 46px;
   margin-bottom: 0px;
-  margin-top:30px;
+  margin-top:20px;
 }
 .box-crypto-content p{
   margin-top: 9px;
   font-size: 12px; 
   color: #63687D;
   font-style: italic;
-  font-weight: bold;
   letter-spacing: 3px;
   }
 
@@ -134,23 +143,26 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .box-gainer{
   width: 255px;
-  height: 125px;
+  min-height: 125px;
   /* border: 1px solid red; */
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-evenly;
   margin-top: 24px;
   background-color: #f1f3fa;
 }
 
 .box-gainer-header{
+  margin-top:27px;
   padding-left: 24px;
+  padding-right: 31px;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .box-gainer-header h1{
@@ -163,16 +175,23 @@
   color: #63687D;
   font-size: 14px;
   font-weight: bold;
-  text-align: justify;
-  margin-bottom: 0;
+  text-align: left;
+  margin: 0;
+  padding: 0;
 }
 
 .box-gainer-content{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-around;
+  margin-top: 24px;
+  padding-left: 24px;
   padding-right: 31px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 19px;
+}
+
+.box-gainer-content h1{
+  margin: 0;
 }
 
 .box-gainer-content div{
