--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -25,7 +25,7 @@ $greenColor: #1eb589;
 .box-light {
   background-color: $boxColor-ligth;
 }
-.hover-light {
+.hover-light:hover {
   background-color: $hoverColor-ligth;
 }
 
@@ -41,7 +41,7 @@ $greenColor: #1eb589;
 .box-dark {
   background-color: $boxColor-dark;
 }
-.hover-dark {
+.hover-dark:hover {
   background-color: $hoverColor-dark;
 }
 
@@ -86,11 +86,9 @@ body {
     p {
       text-align: start;
       font-size: 14px;
-      color: $secondaryColor-ligth;
       font-weight: bold;
     }
     h1 {
-      color: $primaryColor-ligth;
       font-size: 28px;
       font-weight: bold;
       margin: 0;
@@ -107,7 +105,6 @@ body {
       p {
         margin-right: 20px;
         font-size: 14px;
-        color: $secondaryColor-ligth;
         font-weight: bold;
       }
     }
@@ -129,11 +126,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: $boxColor-ligth;
   cursor: pointer;
-  &:hover {
-    background-color: $hoverColor-ligth;
-  }
   .box-header {
     display: flex;
     align-items: center;
@@ -141,7 +134,6 @@ body {
     p {
       margin-left: 10px;
       font-size: 14px;
-      color: $secondaryColor-ligth;
       font-weight: bold;
     }
     img {
@@ -152,7 +144,6 @@ body {
   .box-content {
     h1 {
       margin-bottom: 0px;
-      color: $primaryColor-ligth;
       line-height: 48px;
       font-size: 46px;
       margin-bottom: 0px;
@@ -161,7 +152,6 @@ body {
     p {
       margin-top: 9px;
       font-size: 12px;
-      color: $secondaryColor-ligth;
       font-style: italic;
       letter-spacing: 3px;
     }
@@ -179,7 +169,6 @@ body {
 }
 
 .sub-title {
-  color: $secondaryColor-ligth;
   font-size: 24px;
   font-weight: bold;
   margin-top: 46px;
@@ -196,11 +185,7 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   margin-top: 24px;
-  background-color: $boxColor-ligth;
   cursor: pointer;
-  &:hover {
-    background-color: $hoverColor-ligth;
-  }
   .box-header {
     margin-top: 27px;
     padding-left: 24px;
@@ -209,13 +194,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    h1 {
-      color: $primaryColor-ligth;
-      font-size: 32px;
-      margin-top: 23px;
-    }
     p {
-      color: $secondaryColor-ligth;
       font-size: 14px;
       font-weight: bold;
       text-align: left;
