--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -230,7 +230,7 @@ body {
 
 .attribution {
   margin-top:50px;
-  font-size: 11px;
+  // font-size: 11px;
   text-align: center;
   a {
     color: hsl(228, 45%, 44%);
